Stubbed out Web UI paths (with @PathVariable annotations).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3255 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2018-08-24  Allen D. Ball  <ball@sol.local>
 
+	* src/main/java/forvm/UIController.java:
+	Stubbed out Web UI paths (with @PathVariable annotations).
+
 	* src/main/java/forvm/ant/taskdefs/MarkdownTask.java:
 	Added <markdown-parse/> and <markdown-render/> Ant Tasks.
 
