Integrated spring-boot-starter-security and added Login/Logout functionality.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3262 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-08-26  Allen D. Ball  <ball@sol.local>
+
+	* Integrated spring-boot-starter-security and added Login/Logout
+	functionality.
+
 2018-08-25  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/UIController.java: Outlined navigation.
