--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-08-26  Allen D. Ball  <ball@sol.local>
 
+	* Added AUTHOR role to security model.
+
 	* Integrated spring-boot-starter-security and added Login/Logout
 	functionality.
 
