Added SUBSCRIBER and AUTHOR roles to security model.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3264 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2018-08-26  Allen D. Ball  <ball@sol.local>
 
-	* Added AUTHOR role to security model.
+	* Added SUBSCRIBER and AUTHOR roles to security model.
 
 	* Integrated spring-boot-starter-security and added Login/Logout
 	functionality.
