Completed pagination implementation for /posts/.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3266 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-08-27  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/UIController.java:
+	Completed pagination implementation for /posts/.
+
 2018-08-26  Allen D. Ball  <ball@sol.local>
 
 	* Added navigation.
