--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-08-28  Allen D. Ball  <ball@sol.local>
+
+	* Mapped one:many Author->Posts relationship.
+
 2018-08-27  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/UIController.java:
