Added javax.validation.constraints annotations.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3274 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2018-08-28  Allen D. Ball  <ball@sol.local>
 
+	* src/main/java/forvm/entity/Credential.java:
+	Added javax.validation.constraints annotations.
+
 	* Mapped one:many Author->Posts relationship.
 
 2018-08-27  Allen D. Ball  <ball@sol.local>
