Added author "preview" functionality.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3279 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-08-29  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/MarkdownConfiguration.java:
+	Added author "preview" functionality.
+
 2018-08-28  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/entity/Credential.java:
