--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-04  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/AttachmentRestController.java:
+	Initial writing.
+
 2018-08-29  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/MarkdownConfiguration.java:
