--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-05  Allen D. Ball  <ball@sol.local>
+
+	* Renamed "post" to "article" to avoid confusion with RESTful
+	semantics.
+
 2018-09-04  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/AttachmentRestController.java:
