Use @EnableGlobalMethodSecurity and @PreAuthorize annotations to enable and implement method level security.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3297 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-06  Allen D. Ball  <ball@sol.local>
+
+	* Use @EnableGlobalMethodSecurity and @PreAuthorize annotations to
+	enable and implement method level security.
+
 2018-09-05  Allen D. Ball  <ball@sol.local>
 
 	* Renamed "post" to "article" to avoid confusion with RESTful
