--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-07  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/WebSecurityConfigurerImpl.java:
+	Require HTTP Basic Authentication for /api/**.
+
 2018-09-06  Allen D. Ball  <ball@sol.local>
 
 	* Use @EnableGlobalMethodSecurity and @PreAuthorize annotations to
