--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2018-09-07  Allen D. Ball  <ball@sol.local>
 
+	* src/main/java/forvm/APIRestController.java:
+	Interim check-in: Happy-path author and article posting APIs but
+	still need resourceand parameter checks including link
+	re-writing.
+
 	* src/main/java/forvm/WebSecurityConfigurerImpl.java:
 	Require HTTP Basic Authentication for /api/**.
 
