--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-09  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/BootstrapUI.java:
+	Interim check-in: Parameterized Bootstrap UI.
+
 2018-09-07  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/APIRestController.java:
