Completed [PUT]/api/v1/author and [POST,PUT]/api/v1/article APIs.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3318 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-2018-09-07  Allen D. Ball  <ball@sol.local>
+2018-09-10  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/APIRestController.java:
-	Interim check-in: Happy-path author and article posting APIs but
-	still need resource and parameter checks including link
-	re-writing.
+	Completed [PUT]/api/v1/author and [POST,PUT]/api/v1/article APIs.
+
+2018-09-07  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/WebSecurityConfigurerImpl.java:
 	Require HTTP Basic Authentication for /api/**.
