Added `title` to Article.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3323 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-09-12  Allen D. Ball  <ball@sol.local>
+
+	* Added `title` to Article.
+
 2018-09-10  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/APIRestController.java:
