Added (mostly) generic form processing.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3348 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-01  Allen D. Ball  <ball@sol.local>
+
+	* Added (mostly) generic form processing.
+
 2018-09-14  Allen D. Ball  <ball@sol.local>
 
 	* Switched from commonmark-java to flexmark-java.
