Added "change password" functionality.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3363 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-10-22  Allen D. Ball  <ball@sol.local>
 
+	* Added "change password" functionality.
+
 	* src/main/java/forvm/ChangePasswordForm.java,
 	src/main/resources/templates/forvm/ChangePasswordForm.html:
 	Initial wriitng.
