Added GOOGLE_APPLICATION_CREDENTIALS profile to assist testing against GCP resources.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3466 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-12-04  Allen D. Ball  <ball@sol.local>
+
+	* pom.xml:
+	Added GOOGLE_APPLICATION_CREDENTIALS profile to assist testing
+	against GCP resources.
+
 2018-10-22  Allen D. Ball  <ball@sol.local>
 
 	* Added "change password" functionality.
