Added PUT /author/{slug}, DELETE /article/{slug}", and POST/PUT /article/{slug} APIs.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3482 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-12-08  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/forvm/APIRestController.java:
+	Added PUT /author/{slug}, DELETE /article/{slug}", and POST/PUT
+	/article/{slug} APIs.
+
 2018-12-04  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml:
