Re-worked [POST]/preview to also serve attachments.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3507 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-14  Allen D. Ball  <ball@sol.local>
+
+	* Re-worked [POST]/preview to also serve attachments.
+
 2018-12-08  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/forvm/APIRestController.java:
