Normalize article paths so attachment paths may be trivially calculated.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3525 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-12-18  Allen D. Ball  <ball@sol.local>
+
+	* Normalize article paths so attachment paths may be trivially
+	calculated.
+
 2018-12-14  Allen D. Ball  <ball@sol.local>
 
 	* Re-worked [POST]/preview to also serve attachments.
