Load PrismJS from org.webjars.npm:prismjs.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3562 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-22  Allen D. Ball  <ball@sol.local>
+
+	* Load PrismJS from org.webjars.npm:prismjs.
+
 2018-12-18  Allen D. Ball  <ball@sol.local>
 
 	* Normalize article paths so attachment paths may be trivially
