--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-03-30  Allen D. Ball  <ball@sol.local>
+
+	* Released version 1.0.1: Display 8 entries per page.
+
 2019-03-27  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml: Released version 1.0.0.
