--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-01  Allen D. Ball  <ball@sol.local>
+
+	* pom.xml: Started development of 1.1-SNAPSHOT.
+
 2019-03-30  Allen D. Ball  <ball@sol.local>
 
 	* Released version 1.0.1: Display 8 entries per page.
