--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-04-02  Allen D. Ball  <ball@sol.local>
+
+	* Interim check-in:
+	BootstrapUI -> HTML5Template; started the process of removing
+	Bootstrap-specific mark-up from templates.
+
 2019-04-01  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml: Started development of 1.1-SNAPSHOT.
