Interim check-in: BootstrapUI -> HTML5Template; continued the process of removing Bootstrap-specific mark-up from templates.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3994 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
-2019-04-03  Allen D. Ball  <ball@sol.local>
+2019-04-05  Allen D. Ball  <ball@sol.local>
 
 	* Interim check-in:
-	BootstrapUI -> HTML5Template; started the process of removing
+	BootstrapUI -> HTML5Template; continued the process of removing
 	Bootstrap-specific mark-up from templates.
 
 2019-04-01  Allen D. Ball  <ball@sol.local>
