Re-factored HTML5Template to provide *only* semantic HTML5.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3998 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,6 @@
-2019-04-05  Allen D. Ball  <ball@sol.local>
+2019-04-06  Allen D. Ball  <ball@sol.local>
 
-	* Interim check-in:
-	BootstrapUI -> HTML5Template; continued the process of removing
-	Bootstrap-specific mark-up from templates.
+	* Use Bootstrap for mark-up.
 
 2019-04-01  Allen D. Ball  <ball@sol.local>
 
