--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-04-08  Allen D. Ball  <ball@sol.local>
+
+	* src/main/resources/templates/forvm.html:
+	Use [(${...})] to include raw HTML.
+
 2019-04-07  Allen D. Ball  <ball@sol.local>
 
 	* Released version 1.1.1.
