--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2019-04-08  Allen D. Ball  <ball@sol.local>
 
+	* Released version 1.1.2.
+
+	* Generate WAR artifact.
+
 	* src/main/resources/templates/forvm.html:
 	Use [(${...})] to include raw HTML.
 
