--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-09  Allen D. Ball  <ball@sol.local>
+
+	* pom.xml: Started development of 1.2-SNAPSHOT.
+
 2019-04-08  Allen D. Ball  <ball@sol.local>
 
 	* Released version 1.1.2.
