--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-04-11  Allen D. Ball  <ball@sol.local>
+
+	* jar/src/main/resources/templates/HTML5Template/body/header.th.xml:
+	Converted from header.html.
+
 2019-04-09  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml: Started development of 1.2-SNAPSHOT.
