Re-factored Thymeleaf templates: *.html to semantic HTML5, *.th.xml to Bootstrap control classes, and *.[s]css to style.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4050 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-04-19  Allen D. Ball  <ball@sol.local>
+
+	* Re-factored Thymeleaf templates: *.html to semantic HTML5,
+	*.th.xml to Bootstrap control classes, and *.[s]css to style.
+
 2019-04-11  Allen D. Ball  <ball@sol.local>
 
 	* jar/src/main/resources/templates/HTML5Template/body/header.th.xml:
