* Compacted HTML5Template.html into a single template. 	HTML5Template subclass implementors may optionally provide 	::head/meta, ::head/link, ::head/style, ::head/script, 	::body/header[0], ::body/main[0], ::body/aside[0], 	::body/footer[0], and ::body/script.
	* Re-factored Thymeleaf templates: *.html for semantic HTML5,
	*.th.xml for Bootstrap control classes and style.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4071 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
-2019-04-19  Allen D. Ball  <ball@sol.local>
+2019-04-23  Allen D. Ball  <ball@sol.local>
 
-	* Re-factored Thymeleaf templates: *.html to semantic HTML5,
-	*.th.xml to Bootstrap control classes, and *.[s]css to style.
+	* Re-factored Thymeleaf templates: *.html for semantic HTML5,
+	*.th.xml for Bootstrap control classes and style.
 
 2019-04-11  Allen D. Ball  <ball@sol.local>
 
