--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-04-23  Allen D. Ball  <ball@sol.local>
 
+	* pom.xml: Released version 1.2.0.
+
 	* Re-factored Thymeleaf templates: *.html for semantic HTML5,
 	*.th.xml for Bootstrap control classes and style.
 
