Allow unauthenticated access to /webjars/**.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4093 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-04-25  Allen D. Ball  <ball@sol.local>
+
+	* jar/src/main/java/forvm/WebSecurityConfigurerImpl.java:
+	Allow unauthenticated access to /webjars/**.
+
 2019-04-23  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml: Released version 1.2.0.
