--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-07-21  Allen D. Ball  <ball@sol.local>
+
+	* pom.xml: Started development of 1.3-SNAPSHOT.
+
 2019-04-25  Allen D. Ball  <ball@sol.local>
 
 	* jar/src/main/java/forvm/WebSecurityConfigurerImpl.java:
