--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-08-24  Allen D. Ball  <ball@sol.local>
+
+	* pom.xml: Released version 1.3.0.
+
 2019-07-29  Allen D. Ball  <ball@sol.local>
 
 	* src/main/resources/templates/forvm.*:
