--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-11-13  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Released version 1.3.1.
+
 2019-08-24  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml: Released version 1.3.0.
