--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-11-14  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/resources/application.properties:
+	Increase maximum file upload size
+	(spring.servlet.multipart.max-file-size)
+	(spring.servlet.multipart.max-request-size, and
+	server.tomcat.max-swallow-size).
+
 2019-11-13  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.3.1.
