--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-11-14  Allen D. Ball  <ball@hcf.dev>
 
+	* pom.xml: Released version 1.3.2.
+
 	* src/main/resources/application.properties:
 	Increase maximum file upload size
 	(spring.servlet.multipart.max-file-size)
