--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-11-15  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/resources/application.properties:
+	Set server.{jetty,tomcat}.max-http-form-post-size.
+
 2019-11-14  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.3.2.
