--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-11-15  Allen D. Ball  <ball@hcf.dev>
 
+	* pom.xml: Released version 1.3.3.
+
 	* src/main/resources/application.properties:
 	Set server.{jetty,tomcat}.max-http-form-post-size.
 
