--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-12-06  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml:
+	Released version 1.3.4.
+	Use ball:parent:20191206.0.
+
 2019-11-15  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.3.3.
