--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-01-18  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml:
+	Released version 1.3.6.
+	Use ball:parent:20200117.0.
+
 2020-01-02  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml:
