Started development SNAPSHOT.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@5268 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-02-02  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 1.4-SNAPSHOT.
+
 2020-01-30  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.4.0.
