--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-02-03  Allen D. Ball  <ball@hcf.dev>
+
+	* License under Apache License, Version 2.0.
+
 2020-02-02  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Started development of 1.5-SNAPSHOT.
