--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-2020-02-08  Allen D. Ball  <ball@hcf.dev>
+2020-02-12  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 1.6-SNAPSHOT.
+	* pom.xml:
+	Released version 1.6.0.
+	Updated dependencies through parent POM 20200212.0.
 
 2020-02-07  Allen D. Ball  <ball@hcf.dev>
 
