--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-08  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/forvm/MarkdownService.java:
+	Changes required by Flexmark 0.61.0.
+
 2020-02-12  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml:
