--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-05-18  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 1.6.3.
+
 2020-05-13  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.6.2.
