--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2020-05-18  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 1.6.3.
+	* pom.xml: Started development of 1.7-SNAPSHOT.
 
 2020-05-13  Allen D. Ball  <ball@hcf.dev>
 
