--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2020-05-18  Allen D. Ball  <ball@hcf.dev>
+2020-06-12  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 1.7-SNAPSHOT.
+	* pom.xml: Released version 1.7.0.
 
 2020-05-13  Allen D. Ball  <ball@hcf.dev>
 
