--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-27  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/resources/templates/forvm.model.properties:
+	Include popper.js.
+
 2020-06-12  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.7.0.
