--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2020-06-27  Allen D. Ball  <ball@hcf.dev>
 
+	* pom.xml: Started development of 1.7.1.
+
 	* src/main/resources/templates/forvm.model.properties:
 	Include popper.js.
 
