--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-2020-06-27  Allen D. Ball  <ball@hcf.dev>
+2020-07-15  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 1.7.1.
+	* pom.xml: Released version 1.7.1.
+
+2020-06-27  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/resources/templates/forvm.model.properties:
 	Include popper.js.
