--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-08-30  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 1.8-SNAPSHOT.
+
 2020-07-15  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.7.1.
