--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2020-08-30  Allen D. Ball  <ball@hcf.dev>
+2020-09-03  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 1.8-SNAPSHOT.
+	* pom.xml: Released version 1.8.0.
 
 2020-07-15  Allen D. Ball  <ball@hcf.dev>
 
