--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-06  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 1.8.1-SNAPSHOT.
+
 2020-09-03  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 1.8.0.
