--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-09-19  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/resources/templates/forvm.th.xml:
+	Use #webjars.assets().
+
 2020-09-06  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Started development of 1.8.1-SNAPSHOT.
