Use ".../{slug}/{path:.+}" (regular expression) to get attachment path.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6852 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-10-06  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/forvm/AttachmentRestController.java:
+	Use ".../{slug}/{path:.+}" (regular expression) to get attachment
+	path.
+
 2020-09-19  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/resources/templates/forvm.th.xml:
