Added Oauth2 client dependencies.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6861 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-10-11  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Added Oauth2 client dependencies.
+
 2020-10-06  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/forvm/AttachmentRestController.java:
