--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-10-13  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/forvm/WebSecurityConfigurerImpl.java:
+	Use HttpSecurity Customizer (lambda) interfaces.
+
 2020-10-11  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Added Oauth2 client dependencies.
