--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-10-16  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/forvm/APIRestController.java:
+	Added @ExceptionHandler for AccessDeniedException.
+
 2020-10-13  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/forvm/WebSecurityConfigurerImpl.java:
