--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-12-14  Allen D. Ball  <ball@hcf.dev>
+
+	* Java SE 11
+
 2020-11-16  Allen D. Ball  <ball@hcf.dev>
 
 	* Added configurable OAuth2 support.
