--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-12-15  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Released version 2.0.0.
+
 2020-12-14  Allen D. Ball  <ball@hcf.dev>
 
 	* Java SE 11
@@ -30,10 +34,6 @@
 
 	* src/main/resources/templates/forvm.th.xml:
 	Use #webjars.assets().
-
-2020-09-06  Allen D. Ball  <ball@hcf.dev>
-
-	* pom.xml: Started development of 2.0-SNAPSHOT.
 
 2020-09-03  Allen D. Ball  <ball@hcf.dev>
 
