--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-01-03  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Released version 2.0.1.
+
 2020-12-15  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 2.0.0.
