--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-03-19  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 2.0.2-SNAPSHOT.
+
 2021-02-18  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 2.0.1.20210218.
