--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2021-03-19  Allen D. Ball  <ball@hcf.dev>
+2021-04-15  Allen D. Ball  <ball@hcf.dev>
 
-	* pom.xml: Started development of 2.0.2-SNAPSHOT.
+	* pom.xml: Released version 2.0.2.20210415.
 
 2021-02-18  Allen D. Ball  <ball@hcf.dev>
 
