Started development of forvm 2.1.0-SNAPSHOT.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@7959 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-25  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development of 2.1.0-SNAPSHOT.
+
 2021-04-15  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 2.0.2.20210415.
